--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "keywords": [],
   "dependencies": {
-    "coffee-script": "~1.6.2"
+    "coffee-script": "~1.6.2",
+    "event-emitter": "~0.2.1"
   }
 }
